#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(kafkalite, 0.0.1, sri.panyam@gmail.com)
AM_INIT_AUTOMAKE(kafkalite, 0.0.1)
AC_CONFIG_SRCDIR([src/kafkalite.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_FUNC_MALLOC
AC_OUTPUT(Makefile src/Makefile)
