ACLOCAL_AMFLAGS = -I m4 --install
# what flags you want to pass to the C compiler & linker
AM_CFLAGS = --pedantic -Wall -std=c99
AM_LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
lib_LIBRARIES = libkafkalite.a
# lib_LTLIBRARIES = libkafkalite.la
libkafkalite_a_SOURCES = kafkalite.h klarray.c klarray.h klbuffer.c klbuffer.h klconcurrency.h klconsumer.h klcontext.c klcontext.h klfwddefs.h kliterator.c kliterator.h klmessage.h klprivate.h klpthreadmutex.c klpthreadmutex.h kltopics.c kltopics.h klutils.c klutils.h
